package on_ck.decorator.B3;

public abstract class Widget {
    abstract void show();
}
