@startuml
'https://plantuml.com/class-diagram

abstract class Widget
class Text {
    String text
}
abstract class WidgetDecorator
class Center
class Column


Widget <|-- Text
Widget <|-- WidgetDecorator
WidgetDecorator --> Widget : child
WidgetDecorator <|-- Center
WidgetDecorator <|-- Column



@enduml